<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ArielCast</string>
    <string name="arielcast2" tools:ignore="DuplicateDefinition">ArielCast</string>
    <string name="email_address">Email Address</string>
    <string name="password1" tools:ignore="DuplicateDefinition">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email1">Email</string>
    <string name="phone1">Phone</string>
    <string name="welcome">Welcome!</string>
    <string name="textView">TextView</string>
    <string name="i_m_lecturer">I\'m lecturer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="arielcast" />
    <string name="full_name" />
    <string name="password" />
    <string name="phone" />
    <string name="email" />
    <string name="register" />
    <string name="title_activity_lecturer" />
    <string name="credits">Credits</string>
    <string name="button">Button</string>
    <string name="year">Year</string>
    <string name="semester">Semester</string>
    <string name="course_name">Course Name</string>
    <string name="main_title">Main Title</string>
    <string name="todo">TODO</string>
    <string name="sub_title">Sub Title</string>
    <string name="lecture_name">lecture_name</string>
    <string name="login_password">login_password</string>
    <string name="logout">logout</string>
    <string name="search_course">Search Course</string>
    <string name="title_activity_mail">MailActivity</string>
    <string name="watch_later_playlist">Watch Later Playlist</string>
    <string name="my_courses">My Courses</string>
</resources>