<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/banner"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/arielcast"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="81dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="209dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:ems="10"
        android:layout_margin="60dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="305dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:text="@string/login"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="390dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/setNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="468dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        tools:layout_editor_absoluteX="343dp"
        tools:layout_editor_absoluteY="468dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>