<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUser">

    <TextView
        android:id="@+id/banner"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/arielcast"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="81dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/register"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:text="@string/register"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="482dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/emailAdress"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="318dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="Phone"
        android:inputType="phone"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="244dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="397dp"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/full_name"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="173dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>