<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/lecture_image"
        android:layout_width="93dp"
        android:layout_height="81dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ariel_logo"
        tools:srcCompat="@mipmap/ic_bannerlogo2_foreground" />

    <LinearLayout
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/main_title"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewSub"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/sub_title"
            android:textColor="#a9a9a9"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewMail"
        android:layout_width="49dp"
        android:layout_height="68dp"
        android:layout_weight="1"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ImageView
        android:id="@+id/ImageViewPlus"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_weight="1"
        android:visibility="visible"
        app:srcCompat="@android:drawable/ic_menu_add" />

</LinearLayout>